<resources>
    <string name="app_name">SignUpForm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Ok" >ok</string>
    <string name="Cancel">Cancel</string>
    <string name="Username">Username:</string>
    <string name="Submit">Submit</string>
    <string name="Username_hint">Please enter your username</string>
    <string name="Password">Password</string>
    <string name="Password_hint">Please enter your password</string>
    <string name="Confirm">Confirm</string>
    <string name="Confirm_hint">Please confirm your password</string>
    <string name="random">random</string>
</resources>
