<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <TextView
        android:text="@string/random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/username"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/Username" />

        <EditText
            android:id="@+id/username_textbox"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="75"
            android:hint="@string/Username_hint"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Password"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/Password" />

        <EditText
            android:id="@+id/password_textbox"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="75"
            android:hint="@string/Password_hint"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirm_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/confirm"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/Confirm" />

        <EditText
            android:id="@+id/confirm_textbox"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/username"
            android:layout_weight="75"
            android:hint="@string/Confirm_hint"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/Submit" />


</LinearLayout>
